...
  onMapPress,
  onRegionChange,
  onSelectRoute,
}, ref) => {
  return (
    <MapView
      testID="ride-map"
      ref={ref}
      style={[styles.map, { height: mapHeight }]}
      provider={PROVIDER_GOOGLE}
      initialRegion={{
        latitude: -19.9322352, // Default to Belo Horizonte
        longitude: -43.9376369,
...
