...

  return (
    <ScrollView contentContainerStyle={{ flexGrow: 1 }}>
      <View style={commonStyles.container}>
        <View style={commonStyles.headerView}>
          <Animated.Text style={[commonStyles.title, { opacity: fadeAnim }]}>
            Carona?
          </Animated.Text>
        </View>

        <Animated.View style={[commonStyles.contentView, animatedStyle]}>
          <Text style={commonStyles.subtitle}>Cadastre-se</Text>
          
          <View style={commonStyles.formGroup}>
            <Text style={commonStyles.inputLabel}>Nome</Text>
            <TextInput 
              style={commonStyles.textInput} 
              value={username} 
...
